version 0.60
01/03/2018
	- removed old policy and deprecated code (margaretha)
	- moved authentication related code to /full (margaretha)

version 0.59.10 
20/02/2018
	- updated hibernate and reflection versions (margaretha)
	- added Changes file (margaretha)
	- merged BeanConfigBaseTest to BeanConfigTest in /full (margaretha)
	- added status code for already deleted entry (margaretha)
	- updated library versions and java environment (margaretha)
	- added status codes (margaretha)
	- moved validation.properties (margaretha)
	- fixed unrecognize media-type application/json (margaretha)
	
version 0.59.9 	
08/11/2017
	- fixed missing exception in JsonUtils (margaretha)
	- fixed and restructured KustvaktResponseHandler (margaretha)
	- updated status code in ParameterChecker (margaretha)
	
version 0.59.8 
24/10/2017
	- restructured Kustvakt and created core project (margaretha)
	- marked loader classes as deprecated (margaretha)
	- updated Spring version (margaretha)
	- moved unnecessary dependencies (margaretha)