@@ -24,11 +24,11 @@ mail.address.retrieval = test
 template.group.invitation = notification.vm
 
 ## default layers
-default.layer.p = tt
-default.layer.l = tt
-default.layer.o = opennlp
-default.layer.d = mate
-default.layer.c = corenlp
+default.layer.partOfSpeech = tt
+default.layer.lemma = tt
+default.layer.orthography = opennlp
+default.layer.dependency = mate
+default.layer.constituent = corenlp
 
 ## delete configuration (default hard)
 # delete.auto.group = hard
